# Facade_drone_Vision

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 00_master_prompt_trace.md  01_requirements.md  02_architecture.md  03_environment_report.md  04_milestone_log.md  05_runbook.md  06_project_worklog.md  07_ros_gazebo_compatibility.md  08_status_report.md  09_next_steps_real_facade_pipeline.md  10_dataset_source_selection.md  11_remaining_work.md  12_progress_evaluation.md  13_training_run_log.md  14_object_avoidance_route_handling.md  15_github_proof_checklist.md  16_closed_loop_mission_demo.md  17_solidworks_and_interview_demo_plan.md  18_iterative_critique_checklist.md  19_teaching_todos_and_checkpoints.md  20_senior_engineer_teaching_guide.md
scripts/: analyze_building_image.py  analyze_building_with_segformer.py  check_environment.ps1  check_environment.sh  check_interview_demo_assets.py  check_python_stack.py  check_teaching_docs.py  convert_cmp_to_cleaning_masks.py  convert_cmp_to_yolo_obstacles.py  create_interview_demo_storyboard.py  create_yolo_overfit_dataset.py  demo_object_avoidance_route.py  download_cmp_facade.py  evaluate_lawnmower.py  evaluate_rl.py  generate_solidworks_quadcopter.py  infer_segformer_cleaning.py  infer_yolo_obstacles.py  install_humble_fortress_prereqs.sh  prepare_cmp_facade_index.py  preview_cmp_facade_sample.py  run_all_verification.ps1  run_all_verification.sh  run_closed_loop_mission_demo.py  run_perception_demo.py  safety_fault_demo.py  smoke_test_core.py  source_humble_fortress_env.sh  train_ppo_smoke.py  (+2 more)
(+41 files in other folders)
