[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "facade-uav"
version = "0.1.0"
description = "Autonomous facade-cleaning UAV simulation, perception, safety, and RL scaffold."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
